Fix a issue that scroll is not work on mobiles.

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1207,7 +1207,7 @@ $sidebar-display: "sidebar-display";
     }
 
     #analytics-box {
-      text-align: center;
+      display: none;
     }
   }
 
